k8s/1bis/deployment-api-with-configmap-and-secret.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-api
  namespace: <prenom>-test3

spec:
  replicas: 2

  selector:
    matchLabels:
      app: monapp
      tier: api

  strategy:
    type: Recreate

  template:
    metadata:
      labels:
        app: monapp
        tier: api

    spec:
      priorityClassName: business-app-critical
      containers:
      - name: monapp-api
        image: mendhak/http-https-echo:28
        imagePullPolicy: IfNotPresent

        volumeMounts:
        - name: volume-secret-appconf
          mountPath: /etc/app

        resources:
          requests:
            memory: "16M"
            cpu: "50m"
            ephemeral-storage: "512M"
          limits:
            memory: "128M"
            cpu: "200m"
            ephemeral-storage: "512M"

        startupProbe:
          tcpSocket:
            port: 8080
          failureThreshold: 12
          periodSeconds: 10

        livenessProbe:
          httpGet:
            path: /healthy
            port: 8080
          periodSeconds: 30
          failureThreshold: 3
          initialDelaySeconds: 0

        readinessProbe:
          httpGet:
            path: /ready
            port: 8080
          periodSeconds: 10
          failureThreshold: 3
          initialDelaySeconds: 0
          timeoutSeconds: 5

      volumes:
      - name: volume-secret-appconf
        secret:
          secretName: secret-appconf
