k8s/1bis/networkpolicie-api-allow-from-namespace.yml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  namespace: <prenom>-test3
  name: api-allow-from-namespace
spec:
  podSelector:
    matchLabels:
      app: monapp
      tier: api
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: <prenom>-test3
